--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,28 @@
+<!-- res/layout/activity_main.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     android:padding="16dp">
 
     <Button
-        android:id="@+id/buttonBai1"
-        android:layout_width="match_parent"
+        android:id="@+id/btnFirstScreen"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go to Bài 1" />
+        android:text="Go to Bai Mot" />
 
     <Button
-        android:id="@+id/buttonBai2"
-        android:layout_width="match_parent"
+        android:id="@+id/btnSecondScreen"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Go to Bài 2" />
+        android:text="Go to Bai Hai"
+        android:layout_marginTop="16dp" />
 
     <Button
-        android:id="@+id/buttonBai3"
-        android:layout_width="match_parent"
+        android:id="@+id/btnThirdScreen"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Go to Bài 3" />
+        android:text="Go to Bai Ba"
+        android:layout_marginTop="16dp" />
 </LinearLayout>
